# bright

./: README.md  pyproject.toml
src/bright/: __init__.py
